--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "Pixel & Tonic",
-      "homepage": "https://pixelandtonic.com/"
+      "name": "Blecthly",
+      "homepage": "https://bletchley.co/"
     }
   ],
   "support": {
