--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "riniculous/bletchleyckeditor",
   "description": "Edit rich text content in Craft CMS using CKEditor. Adds plugins",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "type": "craft-plugin",
   "keywords": [
     "html",
